[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/title-1.png" type="Texture" id=1]
[ext_resource path="res://sprites/title-2.png" type="Texture" id=2]
[ext_resource path="res://sprites/title-12.png" type="Texture" id=3]
[ext_resource path="res://sprites/title-3.png" type="Texture" id=4]
[ext_resource path="res://sprites/title-10.png" type="Texture" id=5]
[ext_resource path="res://sprites/title-4.png" type="Texture" id=6]
[ext_resource path="res://sprites/title-5.png" type="Texture" id=7]
[ext_resource path="res://sprites/title-6.png" type="Texture" id=8]
[ext_resource path="res://sprites/title-7.png" type="Texture" id=9]
[ext_resource path="res://sprites/title-8.png" type="Texture" id=10]
[ext_resource path="res://sprites/title-9.png" type="Texture" id=11]
[ext_resource path="res://sprites/title-11.png" type="Texture" id=12]
[ext_resource path="res://fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=13]
[ext_resource path="res://scripts/title.gd" type="Script" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 5 ), ExtResource( 12 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
size = 14
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 13 )

[sub_resource type="DynamicFont" id=4]
outline_size = 2
outline_color = Color( 0.501961, 0.501961, 0.501961, 1 )
font_data = ExtResource( 13 )

[node name="title" type="Node2D"]
script = ExtResource( 14 )

[node name="background" type="AnimatedSprite" parent="."]
position = Vector2( 178, 320 )
scale = Vector2( 1.01179, 1.01179 )
frames = SubResource( 1 )
frame = 11
playing = true

[node name="play_button" type="Button" parent="."]
margin_left = 65.0
margin_top = 410.0
margin_right = 129.0
margin_bottom = 430.0
custom_fonts/font = SubResource( 2 )
action_mode = 0
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sound_button" type="Button" parent="."]
margin_left = 265.0
margin_top = 560.0
margin_right = 345.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 3 )
action_mode = 0
text = "Sound"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits_button" type="Button" parent="."]
margin_left = 228.0
margin_right = 352.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
action_mode = 0
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="play_button" to="." method="_on_play_button_button_down"]
[connection signal="pressed" from="play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="sound_button" to="." method="_on_sound_button_pressed"]
